fixed text-alignment

--- a/src/css/SignIn.css
+++ b/src/css/SignIn.css
@@ -92,7 +92,7 @@
     margin-bottom: 15px;
     font-family: inherit;
     padding: 5px;
-    text-align: center;
+    text-align: left;
     width: 100%;
     clear: both;
 }
@@ -110,7 +110,7 @@
     margin-bottom: 15px;
     font-family: inherit;
     padding: 5px;
-    text-align: center;
+    text-align: left;
     width: 100%;
     clear: both;
 }
